--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -21,8 +21,13 @@
   background-position: center;
   background-size: cover; */
 
+
   @include respond(phone) {
     padding: 0rem $default-font-size;
+  }
+
+  .animated-name {
+    color: greenyellow;
   }
 
   .hero-title {
@@ -63,3 +68,4 @@
     }
   }
 }
+
